crates/common/src/tuner/snapshots/common__tuner__config__tests__tuner_config_1536x864.snap
---
source: crates/common/src/tuner/config.rs
expression: config
---
{
  "sensor_data": [
    {
      "key": [
        0,
        0
      ],
      "min_frequency": 21.533203,
      "max_frequency": 2224.38,
      "min_magnitude": 0.015,
      "max_magnitude": 0.75
    },
    {
      "key": [
        0,
        1
      ],
      "min_frequency": 2224.38,
      "max_frequency": 4427.2266,
      "min_magnitude": 0.015,
      "max_magnitude": 0.75
    },
    {
      "key": [
        0,
        2
      ],
      "min_frequency": 4427.2266,
      "max_frequency": 6630.073,
      "min_magnitude": 0.015,
      "max_magnitude": 0.75
    },
    {
      "key": [
        0,
        3
      ],
      "min_frequency": 6630.073,
      "max_frequency": 8832.92,
      "min_magnitude": 0.015,
      "max_magnitude": 0.75
    },
    {
      "key": [
        0,
        4
      ],
      "min_frequency": 8832.92,
      "max_frequency": 11035.767,
      "min_magnitude": 0.015,
      "max_magnitude": 0.75
    },
    {
      "key": [
        1,
        0
      ],
      "min_frequency": 11035.767,
      "max_frequency": 13238.613,
      "min_magnitude": 0.015,
      "max_magnitude": 0.75
    },
    {
      "key": [
        1,
        1
      ],
      "min_frequency": 13238.613,
      "max_frequency": 15441.46,
      "min_magnitude": 0.015,
      "max_magnitude": 0.75
    },
    {
      "key": [
        1,
        2
      ],
      "min_frequency": 15441.46,
      "max_frequency": 17644.307,
      "min_magnitude": 0.015,
      "max_magnitude": 0.75
    },
    {
      "key": [
        1,
        3
      ],
      "min_frequency": 17644.307,
      "max_frequency": 19847.154,
      "min_magnitude": 0.015,
      "max_magnitude": 0.75
    },
    {
      "key": [
        1,
        4
      ],
      "min_frequency": 19847.154,
      "max_frequency": 22050.0,
      "min_magnitude": 0.015,
      "max_magnitude": 0.75
    }
  ],
  "sample_rate": 44100.0,
  "fft_size": 2048,
  "ny_threshold": 0.75,
  "ny_wet_ratio": 0.3,
  "frequency_range": [
    null,
    null
  ]
}
