crates/common/src/tuner/snapshots/common__tuner__config__tests__tuner_config_1920x1080.snap
---
source: crates/common/src/tuner/config.rs
expression: config
---
{
  "sensor_data": [
    {
      "key": [
        0,
        0
      ],
      "min_frequency": 20.0,
      "max_frequency": 31.697863,
      "min_magnitude": -80.0,
      "max_magnitude": -20.0
    },
    {
      "key": [
        0,
        1
      ],
      "min_frequency": 31.697863,
      "max_frequency": 50.23772,
      "min_magnitude": -80.0,
      "max_magnitude": -20.0
    },
    {
      "key": [
        0,
        2
      ],
      "min_frequency": 50.23772,
      "max_frequency": 79.621414,
      "min_magnitude": -80.0,
      "max_magnitude": -20.0
    },
    {
      "key": [
        0,
        3
      ],
      "min_frequency": 79.621414,
      "max_frequency": 126.19143,
      "min_magnitude": -80.0,
      "max_magnitude": -20.0
    },
    {
      "key": [
        0,
        4
      ],
      "min_frequency": 126.19143,
      "max_frequency": 199.99992,
      "min_magnitude": -80.0,
      "max_magnitude": -20.0
    },
    {
      "key": [
        1,
        0
      ],
      "min_frequency": 199.99992,
      "max_frequency": 316.97864,
      "min_magnitude": -80.0,
      "max_magnitude": -20.0
    },
    {
      "key": [
        1,
        1
      ],
      "min_frequency": 316.97864,
      "max_frequency": 502.37723,
      "min_magnitude": -80.0,
      "max_magnitude": -20.0
    },
    {
      "key": [
        1,
        2
      ],
      "min_frequency": 502.37723,
      "max_frequency": 796.2142,
      "min_magnitude": -80.0,
      "max_magnitude": -20.0
    },
    {
      "key": [
        1,
        3
      ],
      "min_frequency": 796.2142,
      "max_frequency": 1261.9143,
      "min_magnitude": -80.0,
      "max_magnitude": -20.0
    },
    {
      "key": [
        1,
        4
      ],
      "min_frequency": 1261.9143,
      "max_frequency": 1999.9993,
      "min_magnitude": -80.0,
      "max_magnitude": -20.0
    },
    {
      "key": [
        2,
        0
      ],
      "min_frequency": 1999.9993,
      "max_frequency": 3169.7834,
      "min_magnitude": -80.0,
      "max_magnitude": -20.0
    },
    {
      "key": [
        2,
        1
      ],
      "min_frequency": 3169.7834,
      "max_frequency": 5023.7725,
      "min_magnitude": -80.0,
      "max_magnitude": -20.0
    },
    {
      "key": [
        2,
        2
      ],
      "min_frequency": 5023.7725,
      "max_frequency": 7962.142,
      "min_magnitude": -80.0,
      "max_magnitude": -20.0
    },
    {
      "key": [
        2,
        3
      ],
      "min_frequency": 7962.142,
      "max_frequency": 12619.144,
      "min_magnitude": -80.0,
      "max_magnitude": -20.0
    },
    {
      "key": [
        2,
        4
      ],
      "min_frequency": 12619.144,
      "max_frequency": 19999.992,
      "min_magnitude": -80.0,
      "max_magnitude": -20.0
    }
  ],
  "sample_rate": 44100.0
}
