crates/common/src/tuner/snapshots/common__tuner__config__tests__tuner_config_360x800.snap
---
source: crates/common/src/tuner/config.rs
expression: config
---
{
  "sensor_data": [
    {
      "key": [
        0,
        0
      ],
      "min_frequency": 21.533203,
      "max_frequency": 3692.9443,
      "min_magnitude": 0.015,
      "max_magnitude": 0.75
    },
    {
      "key": [
        0,
        1
      ],
      "min_frequency": 3692.9443,
      "max_frequency": 7364.3555,
      "min_magnitude": 0.015,
      "max_magnitude": 0.75
    },
    {
      "key": [
        0,
        2
      ],
      "min_frequency": 7364.3555,
      "max_frequency": 11035.767,
      "min_magnitude": 0.015,
      "max_magnitude": 0.75
    },
    {
      "key": [
        1,
        0
      ],
      "min_frequency": 11035.767,
      "max_frequency": 14707.178,
      "min_magnitude": 0.015,
      "max_magnitude": 0.75
    },
    {
      "key": [
        1,
        1
      ],
      "min_frequency": 14707.178,
      "max_frequency": 18378.588,
      "min_magnitude": 0.015,
      "max_magnitude": 0.75
    },
    {
      "key": [
        1,
        2
      ],
      "min_frequency": 18378.588,
      "max_frequency": 22050.0,
      "min_magnitude": 0.015,
      "max_magnitude": 0.75
    }
  ],
  "sample_rate": 44100.0,
  "fft_size": 2048,
  "ny_threshold": 0.75,
  "ny_wet_ratio": 0.3,
  "frequency_range": [
    null,
    null
  ]
}
