crates/common/src/tuner/snapshots/common__tuner__config__tests__tuner_config_412x915.snap
---
source: crates/common/src/tuner/config.rs
expression: config
---
{
  "sensor_data": [
    {
      "key": [
        0,
        0
      ],
      "min_frequency": 20.0,
      "max_frequency": 63.24554,
      "min_magnitude": -80.0,
      "max_magnitude": -20.0
    },
    {
      "key": [
        0,
        1
      ],
      "min_frequency": 63.24554,
      "max_frequency": 199.99992,
      "min_magnitude": -80.0,
      "max_magnitude": -20.0
    },
    {
      "key": [
        0,
        2
      ],
      "min_frequency": 199.99992,
      "max_frequency": 632.45544,
      "min_magnitude": -80.0,
      "max_magnitude": -20.0
    },
    {
      "key": [
        1,
        0
      ],
      "min_frequency": 632.45544,
      "max_frequency": 1999.9993,
      "min_magnitude": -80.0,
      "max_magnitude": -20.0
    },
    {
      "key": [
        1,
        1
      ],
      "min_frequency": 1999.9993,
      "max_frequency": 6324.552,
      "min_magnitude": -80.0,
      "max_magnitude": -20.0
    },
    {
      "key": [
        1,
        2
      ],
      "min_frequency": 6324.552,
      "max_frequency": 19999.992,
      "min_magnitude": -80.0,
      "max_magnitude": -20.0
    }
  ],
  "sample_rate": 44100.0
}
